--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.10.1",
-        "@inertiajs/inertia-vue": "^0.7.2"
+        "@inertiajs/inertia-vue": "^0.7.2",
+        "bootstrap-icons": "^1.7.1"
     }
 }
